# fpse-project

./: .gitignore  .pre-commit-config.yaml  100_genomes.fasta  1_genomes.fasta  2_genomes.fasta  README.md  bwt  dict  dune-project  freq  get_fastas.py  ocaml_bigbwt.opam  parse  test
benchmark/: bwt.sh  preprocess_fastas.py  results.ipynb  sacak.sh
src/: bindings.c  buildBWT.ml  bwt.ml  dune  fasta.ml  fasta.mli  fm_index.ml  fm_index.mli  fm_indexer.ml  gsacak.c  gsacak.ml  gsacak.mli  hash.ml  hash.mli  naive_bwt.ml  naive_bwt.mli  pfp.ml  pfp.mli  sacak_bwt.ml  sais.ml  sais.mli  serialize.ml  serialize.mli
tests/: dune  fasta.ml  fasta.test  parse.fa  test_bigbwt.ml  test_fasta.ml  test_fm_index.ml  test_pfp.ml  test_serialize.ml  tests.ml
tests/data/: big.txt  big_bwt.txt  parse.test  small.test
