(library
 (name WaveletTree)
 (modules select_support rank_support wavelet_tree)
(libraries bitv)
)

(library
 (name serialize)
 (modules serialize)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name fasta)
 (modules fasta)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name RollHash)
 (modules hash)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name fm_index)
 (modules fm_index)
 (libraries core WaveletTree serialize)
 (preprocess
  (pps ppx_jane)))

(library
 (name BigBWT)
 (modules naive_bwt pfp sais gsacak)
 (libraries core RollHash WaveletTree serialize fasta core_unix.sys_unix core_unix.command_unix )
 (foreign_stubs (language c) (names bindings gsacak) (flags -I. -fPIC))
 (c_library_flags (-O3 -std=c99))
 (preprocess
  (pps ppx_jane)))

(executable
 (name bwt)
 (modules bwt)
 (libraries core core_unix.sys_unix core_unix.command_unix stdio BigBWT)
 (preprocess
  (pps ppx_jane)))

(executable
 (name sacak_bwt)
 (modules sacak_bwt)
 (libraries
  core
  core_unix.sys_unix
  core_unix.command_unix
  stdio
  BigBWT
  )
 (preprocess
  (pps ppx_jane)))

(executable
 (name fm_indexer)
 (modules fm_indexer)
 (libraries core core_unix.sys_unix core_unix.command_unix stdio BigBWT serialize fm_index)
 (preprocess
  (pps ppx_jane)))